# CellBakery

./: .gitignore  CMakeLists.txt  CellBakeryAlternative.sln  linux_build.sh  linux_start.sh
CellBakeryAlternative/: CellBakeryAlternative.vcxproj  CellBakeryAlternative.vcxproj.filters  Main.cpp  Vector.hpp  compute.h  context.h  control.h  graphics.h  gui.h  include.h  starting.h  world.h
CellBakeryAlternative/Debug Console/: vc141.idb
CellBakeryAlternative/Debug Console/CellBake.B9A6247E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CellBakeryAlternative.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CellBakeryAlternative/OSL/: Randomizer.h  Vector234.h  include.h  miniMath.h  typedef.h
CellBakeryAlternative/OpenGL/: gl_func.h  glad.c  glad.cpp  shad_primitive.h  stb_image.h
CellBakeryAlternative/Release Console/CellBake.B9A6247E.tlog/: CL.command.1.tlog  CL.write.1.tlog  CellBakeryAlternative.lastbuildstate  CellBakeryAlternative.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CellBakeryAlternative/Shaders/: cells.frag  cells.geom  cells.vert  petri.frag
CellBakeryAlternative/Shaders/Computing/: cellsPhysics_list.comp  cellsPhysics_process.comp  cellsPhysics_processForces.comp  cellsPhysics_processPositions.comp  light.comp  randomizer1.comp  randomizer2.comp  resetCells.comp  resetGrid.comp
CellBakeryAlternative/Shaders/Graphics/: cells.frag  cells.geom  cells.vert  petri.frag  petri.vert
CellBakeryAlternative/Shaders/sim/: cells_physics.comp  initializer.comp  light.comp  linked_list.comp  (+1 more)
(+1 files in other folders)
